学堂推荐--标题显示2行

--- a/wechat/src/main/webapp/xcview/html/home_page.html
+++ b/wechat/src/main/webapp/xcview/html/home_page.html
@@ -281,7 +281,7 @@
                 								<img src="/xcview/images/offline.png" alt="" class="boutique_main_one_img_type" />
                 							{{/if}}
                 						<div class="boutique_main_one_title">
-                							<div class="div">{{item.gradeName}}</div>
+                							<p class="div">{{item.gradeName}}</p>
                 							<div class="span0" style="margin-bottom: 0rem;">{{item.name}}</div>
                 						</div>
                 						<div class="boutique_main_one_size">
