--- a/online-web/src/main/webapp/web/html/anchor/curriculum.html
+++ b/online-web/src/main/webapp/web/html/anchor/curriculum.html
@@ -123,7 +123,11 @@
 		</td>
 		<td>
 			{{if course.courseForm==1}}
-			<span>直播</span>
+				{{if course.multimediaType==1}}
+				<span>直播</span>
+				{{else if course.multimediaType==2}}
+				<span>语音直播</span>
+				{{/if}}
 			{{else if course.courseForm==2}}
 			<span>点播</span>
 			{{else if course.courseForm==3}}
@@ -842,6 +846,9 @@
 								<label>线下课
 									<input type="radio" value="3" name="course_form" onclick="showCourseAttribute(3)" />
 								<i></i></label>
+								<label>语音直播
+									<input type="radio" value="4" name="course_form" onclick="showCourseAttribute(4)" />
+								<i></i></label>
 							</div>
 	
 							<div class="select">
@@ -850,7 +857,7 @@
 								</select>
 								<p class="warning hide">课程分类不能为空</p>
 							</div>
-							<div class="select live offline special">
+							<div class="select live offline show-video special">
 								<span><em>*</em>开课时间</span>
 								<input type="text"  id="classOpenTiem" readonly="readonly" placeholder="请选择开课时间" style="width: 280px;height: 36px;color: #999999 !important;font-size: 14px;" class="select_time course_start_time">
 								<p class="warning warning_course_start_time hide">开课时间不能为空</p>
@@ -902,7 +909,7 @@
 									<script id="editor_cd" type="text/plain" style="width:540px;height:260px;"></script></div>
 								<p class="warning warning_course_details hide">课程介绍不能为空</p>
 							</div>
-							<div id="resourceType" class="sheng vod live special">
+							<div id="resourceType" class="sheng vod special">
 								<span><em>*</em>资源类型</span>
 								<label>
 									<input type="radio" name="course_multimedia_type" value="1" onclick="initResource(1)" checked="checked" />视频
