--- a/online-web/src/main/webapp/web/html/qusAndAnsDetailTouSu.html
+++ b/online-web/src/main/webapp/web/html/qusAndAnsDetailTouSu.html
@@ -88,36 +88,9 @@
 					<!--我的回答-->
 					<div class="quesDetail-left-first">
 
-						<!--<div class="good-answer-comment" style="display: block;">
-
-                    <div class="comment-top">
-                        <div data-commentid="1" class="commentId"><span class="user-nickname">{{$val.create_person}}：</span><span class="user-content">{{$val.content}}</span>
-                            <p><span class="comment-time">{{$val.create_time}}</span><span class="dianzan">赞({{$val.praise_sum})</span><span class="reply-btn">回复</span><span class="reply-delete">删除</span></p>
-                        </div>
-                    </div>
-                    <div class="reply"><input type="text" placeholder="回复 13811599288：">
-                        <div data-commentid="1" class="commentId"><span class="user-nickname">$val.create_person}}：</span>
-                            <span class="reply-btn">回复</span><span class="reply-delete">删除</span>
-                        </div>
-                    </div>
-
-                    <div class="footer">
-                        <div class="pages" style="">
-                            <div class="Pagination"></div>
-                            <div class="searchPage"><span class="page-sum">共<strong class="allPage">15</strong>页</span><span class="page-go">跳转<input type="text">页</span><a href="javascript:;" class="page-btn">GO</a>
-                            </div>
-                        </div>
-                    </div>
-
-
-                    <div class="comment-bottom clearfix"><input class="writeComment" type="text" placeholder="写下你的评论...">
-                        <div class="comment-btn">评论</div>
-                    </div>
-                </div>-->
-
 					</div>
 					<!--精彩回答-->
-					<div class="quesDetail-left-second clearfix" style="display:none">
+					<!--<div class="quesDetail-left-second clearfix" style="display:none">
 						<div class="good-Answer">
 							<img src="../images/ansandqus/icon_askdetial.png" alt="" />
 							<span class="good">精彩回答</span>
@@ -127,7 +100,7 @@
 
 						</div>
 
-					</div>
+					</div>-->
 					<!--评论-->
 					<div class="good-answer-comment">
 
