--- a/wechat/src/main/webapp/xcview/html/physician/voice_broadcast.html
+++ b/wechat/src/main/webapp/xcview/html/physician/voice_broadcast.html
@@ -196,7 +196,7 @@
 <script type="text/javascript" src="/xcview/js/common/common.js?v=wechat_1.1.1"></script> 
 <script type="text/javascript" src="/xcview/js/common/template.js"></script>    <!--数据模板引入--> 
 <!-- <script type="text/javascript" src="/xcview/js/physician/quiz.js"></script>  -->
-
+<script type="text/javascript" src="/xcview/js/physician/voice_broadcast.js"></script>
 <script>
 	window.onload = function(){
 		var htmlstr = $(".booking_person").find('p').html();
