--- a/online-web/src/main/webapp/web/html/liveVideo.html
+++ b/online-web/src/main/webapp/web/html/liveVideo.html
@@ -31,7 +31,7 @@
 	href=//cnstatic01.e.vhall.com/3rdlibs/mCustomScrollbar/3.0.8/jquery.mCustomScrollbar.min.css>
 <link href="/web/js/vhall/nihao.css" rel="stylesheet" type="text/css" />
 
-<script src="http://cnstatic01.e.vhall.com/3rdlibs/jquery/1.11.2/jquery.min.js" type="text/javascript"></script>
+<script src="//cnstatic01.e.vhall.com/3rdlibs/jquery/1.11.2/jquery.min.js" type="text/javascript"></script>
 <script src="/web/js/common_msg.js" type="text/javascript"></script>
 <script>
 </script>
