--- a/online-web/src/main/webapp/web/html/live-room/live-room.html
+++ b/online-web/src/main/webapp/web/html/live-room/live-room.html
@@ -139,16 +139,24 @@
 		<!--设置弹窗-->
 		<div class="modal-content setup-modal hide">
 			<div class="comment-setup">
-				<span>摄像头</span>
+				<span>摄像头:</span>
 				<select name="">
 					<option value="">王总摄像头</option>
 				</select>
 			</div>
 			<div class="comment-setup">
-				<span>麦克风</span>
+				<span>麦克风:</span>
 				<select name="">
 					<option value="">王总麦克风</option>
 				</select>
+			</div>
+			<div class="comment-setup">
+				<span>自定义尺寸:</span>
+				<span>宽</span>
+				<input type="text" onkeyup="value=value.replace(/[^\d]/g,'')" class="width-my" value="" maxlength="4" />
+				<span>x高</span>
+				<input type="text" onkeyup="value=value.replace(/[^\d]/g,'')" class="height-my" value="" maxlength="4" />
+				<p class="control-size hide" style="color: red; margin-left: 78px;"></p>
 			</div>
 			<div class="comment-setup">
 				<button class="sure" type="button">确认</button>
@@ -396,12 +404,18 @@
 			  						<img src="/web/images/reset_head.png" alt="头像" />
 			  					</div>
 			  					<span class="student-name z">我是超人</span>
+			  					<span class="select-ban y">
+			  						<img src="/web/images/live-room/say-icon.png" alt="选择禁言" title="禁言" />
+			  					</span>
 			  				</li>
 			  				<li>
 			  					<div class="head-portrait z">
 			  						<img src="/web/images/reset_head.png" alt="头像" />
 			  					</div>
 			  					<span class="student-name z">我是超人</span>
+			  					<span class="select-ban y">
+			  						<img src="/web/images/live-room/say-icon.png" alt="选择禁言" title="禁言" />
+			  					</span>
 			  				</li>
 			  				<li>
 			  					<div class="head-portrait z">
