--- a/wechat/src/main/webapp/xcview/html/my_study.html
+++ b/wechat/src/main/webapp/xcview/html/my_study.html
@@ -81,8 +81,8 @@
 	<div class="history_modal">
 		<p>确定清除播放历史?</p>
 		<ul>
-			<li>取消</li>
-			<li>确定</li>
+			<li style="color: #00bc12;">确定</li>
+			<li style="color: #333;">取消</li>
 		</ul>
 	</div>
 <!--我的课程-->
@@ -103,9 +103,7 @@
 								<a href="live_select_album.html?course_id={{item.id}}" style="position: absolute;width: 100%; height: 100%;left: 0; z-index: 2;"></a>
 						    	{{else}}
 								<a href="live_audio.html?my_study={{item.id}}" style="position: absolute;width: 100%; height: 100%;left: 0; z-index: 2;"></a>
-						    {{/if}}
-
-
+						{{/if}}
 <!--直播状态判断-->				
 						{{else if item.type == 3 && item.lineState==1}}  <!--直播中-->
 						<a href="javascript:;" data-ppd="{{item.id}}" class="paly_ing_all" style="position: absolute;width: 100%; height: 100%;left: 0; z-index: 2;"></a>	  
