中医师-学堂--搜索历史记录修改。完善信息--手机物理键返回

--- a/wechat/src/main/webapp/xcview/html/home_page.html
+++ b/wechat/src/main/webapp/xcview/html/home_page.html
@@ -80,7 +80,7 @@
 					<span class="header_seek_main_span">
 						<script type="text/html" id="header_seek_main">
 						{{each items as item i}}
-							<span>{{item.name}}</span>
+							<span>大家都在搜：{{item.name}}</span>
 						{{/each}}
 	           	 		</script>
 					</span>
