--- a/wechat/src/main/webapp/xcview/html/physician/index.html
+++ b/wechat/src/main/webapp/xcview/html/physician/index.html
@@ -81,7 +81,7 @@
 					<span class="header_seek_main_span" id="defaultSearch">
 						<script type="text/html" id="defaultSearchs">
 							{{each items as item i}}
-								<span>{{item.name}}</span>
+								<span>大家都在搜：{{item.name}}</span>
 							{{/each}}
 						</script>
 					</span>
