修改pc加载次数

--- a/wechat/src/main/webapp/demo/details.html
+++ b/wechat/src/main/webapp/demo/details.html
@@ -753,13 +753,15 @@ $(function(){
 <!--这段meta代码需要加上，移动端自适应缩放用-->
 <!--这段JS就是自动检测窗口尺寸大小的，动态改变html的font-size的大小-->
 
-<script src="/xcview/weihoujs/vhallSDK.js"></script>
+<!-- <script src="/xcview/weihoujs/vhallSDK.js"></script> -->
 <script src="/xcview/weihoujs/jquery.mCustomScrollbar.concat.min.js"></script>
 <script src="/xcview/weihoujs/underscore-min.js"></script>
 <script type="text/javascript" src="/xcview/js/common/common.js"></script>
 
 
 <script type="text/javascript" src="/demo/js/giftSend2.js"></script>
+
+
 <script src="https://static.vhallyun.com/jssdk/vhall-jssdk-live-1.0.0.js?v=201806271657"></script>
 <script src="https://static.vhallyun.com/jssdk/vhall-jssdk-doc-1.0.0.js?v=201806271657"></script>
 <script src="https://static.vhallyun.com/jssdk/vhall-jssdk-chat-1.0.0.js?v=201801121522"></script>
