修改中医师--动态--文字。帮助，反馈。修改bug

--- a/wechat/src/main/webapp/xcview/html/feedback.html
+++ b/wechat/src/main/webapp/xcview/html/feedback.html
@@ -55,7 +55,7 @@
 
 	<!-- 中间内容开始 -->
 	<div class="feedback">
-		<textarea name="" rows="" cols="" placeholder="输入反馈内容" class="textarea"></textarea>
+		<textarea name="" rows="" cols="" placeholder="请输入问题并留下联系方式，我们会尽快回复" class="textarea"></textarea>
 	</div>
 	<div class="btn" onclick="feedback()">提交</div>
 	
