--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -513,7 +513,7 @@
 		<div id="mainMenuBarAnchor"></div>
 		<div class="anchor_navigation" id="mainMenuBar">
 			<ul id="mainMenu">
-				<li class="li li_data" id="li-1"><span>全部</span>动态<img src="/xcview/images/drop_down.png" alt="" class="hide0" /></li>
+				<li class="li li_data" id="li-1"><span class="span">全部</span><span class="span_hide">动态</span><img src="/xcview/images/drop_down.png" alt="" class="hide0" /></li>
 				<li class="li li_course" id="li-2">直播</li>
 				<li class="li li_prose_origin" id="li-3" onclick="apprenticeInfo()">师承</li>
 				<li class="li li_evaluate" id="li-4">介绍</li>
@@ -1612,10 +1612,10 @@ $(window).bind("scroll", function() {
                 }
               }
               $(this).addClass('active');
-              $(".li_data span").html($(this).html());
+              $(".li_data .span").html($(this).html());
               $("body").removeClass("body");
               	// 替换文字后，改变3角形的位置
-                var mobile = $(".li_data span").html();		
+                var mobile = $(".li_data .span").html();		
 				if(mobile.length<3){
 					$(".li_data img").css("left","1.9rem");
 				}else{
@@ -1654,16 +1654,18 @@ $(window).bind("scroll", function() {
         // 点击动态筛选里面的内容  
         // 点击全部动态
         $(".filtrate_all").click(function(){
+        	$(".span_hide").show();   //显示--动态文字
             //$(".rests_nav").removeClass("hide");  //其他1
             $(".consilia_nav").removeClass("hide");  // 医案  
             $(".essay_pack_up").removeClass("hide");  //其他2 
             $(".article_nav").removeClass("hide");  //文章 
             $(".rests_nav").removeClass("hide");  //其他3  
             $(".course_nav").removeClass("hide");  //课程 
-            $(".sinatv_nav").removeClass("hide");  //直播 
+            $(".sinatv_nav").removeClass("hide");  //直播
 	    });	
         //点击直播
 	    $(".filtrate_sinatv").click(function(){
+	    	$(".span_hide").hide();   //隐藏--动态文字
             //$(".rests_nav").addClass("hide");  //其他1
             $(".consilia_nav").addClass("hide");  // 医案  
             $(".essay_pack_up").addClass("hide");  //其他2 
@@ -1674,6 +1676,7 @@ $(window).bind("scroll", function() {
 	    });
         //点击语音直播
         $(".filtrate_sinatv1").click(function(){
+        	$(".span_hide").hide();   //隐藏--动态文字
             //$(".rests_nav").addClass("hide");  //其他1
             $(".consilia_nav").addClass("hide");  // 医案
             $(".essay_pack_up").addClass("hide");  //其他2
@@ -1684,6 +1687,7 @@ $(window).bind("scroll", function() {
         });
 	    //点击课程 
 	    $(".filtrate_course").click(function(){
+	    	$(".span_hide").show();   //显示--动态文字
             //$(".rests_nav").addClass("hide");  //其他1
             $(".consilia_nav").addClass("hide");  // 医案  
             $(".essay_pack_up").addClass("hide");  //其他2 
@@ -1694,6 +1698,7 @@ $(window).bind("scroll", function() {
 	    });	
 	    //点击医案
 	    $(".filtrate_consilia").click(function(){
+	    	$(".span_hide").show();   //显示--动态文字
             //$(".rests_nav").addClass("hide");  //其他1
             $(".consilia_nav").removeClass("hide");  // 医案  
             $(".essay_pack_up").addClass("hide");  //其他2 
@@ -1704,6 +1709,7 @@ $(window).bind("scroll", function() {
 	    });	
 	    //点击文章 
 	    $(".filtrate_essay").click(function(){
+	    	$(".span_hide").show();   //显示--动态文字
             //$(".rests_nav").addClass("hide");  //其他1
             $(".consilia_nav").addClass("hide");  // 医案  
             $(".essay_pack_up").addClass("hide");  //其他2 
@@ -1714,6 +1720,7 @@ $(window).bind("scroll", function() {
 	    });	
 	    //点击其他
 	    $(".filtrate_rests").click(function(){
+	    	$(".span_hide").show();   //显示--动态文字
             $(".rests_nav").removeClass("hide");  //其他1
             $(".consilia_nav").addClass("hide");  // 医案  
             $(".essay_pack_up").removeClass("hide");  //其他2 
