--- a/online-web/src/main/webapp/web/html/anchor/curriculum.html
+++ b/online-web/src/main/webapp/web/html/anchor/curriculum.html
@@ -1455,7 +1455,7 @@
 								</div>
 								<span class="uploadfinish" style="display:none;margin-left: 112px;display: block;top: 3px;"><em class="updataSuccess"></em>资源上传完成<span style="color: #999;">(记得点击保存哦)</span> </span>
 								<span style="float: left;display: none">选择视频：<input id="videofile" name="videofile" type="text" /></span>
-								<p class="warning warning1 hide">请先上传资源文件</p >
+								<p class="warning warning1 hide" style="margin-top: 20px;">请先上传资源文件</p >
 							</div>
 	
 							<div class="resource_uploading" style="display:none;">
