完善pc直播间的

--- a/online-web/src/main/webapp/web/html/liveVideo2.html
+++ b/online-web/src/main/webapp/web/html/liveVideo2.html
@@ -544,8 +544,8 @@
 						<div class="send-face hide"></div>
 						<a id="filter-msg" href="javascript:;" class=lecturer style="left: 40px;"></a> 
 						
-						<a id="startlive" href="javascript:;" class="" style="left: 70px;">开始</a>
-						<a id="endlive" href="javascript:;" class="" style="left: 70px;">暂停</a> 
+<!-- 						<a id="startlive" href="javascript:;" class="" style="left: 70px;">开始</a>
+						<a id="endlive" href="javascript:;" class="" style="left: 70px;">暂停</a>  -->
 						
 						<a id="face" href="javascript:;" class="face"></a> 
 						<div class="chitchat">
