修改微信端文件目录

--- a/wechat/src/main/webapp/xcview/html/details.html
+++ b/wechat/src/main/webapp/xcview/html/details.html
@@ -848,7 +848,7 @@ $(function(){
 <script type="text/javascript" src="/xcview/js/common/common.js"></script>
 
 
-<script type="text/javascript" src="/demo/js/giftSend2.js"></script>
+<script type="text/javascript" src="/xcview/js/im/vhallGiftSend.js"></script>
 <script src="https://static.vhallyun.com/jssdk/vhall-jssdk-live-1.0.0.js?v=201806271657"></script>
 <script src="https://static.vhallyun.com/jssdk/vhall-jssdk-doc-1.0.0.js?v=201806271657"></script>
 <script src="https://static.vhallyun.com/jssdk/vhall-jssdk-chat-1.0.0.js?v=201801121522"></script>
@@ -857,8 +857,8 @@ $(function(){
 
 <!-- 部分点击事件 -->
 <script type="text/javascript" src="/xcview/js/details_change.js"></script>
-<script type="text/javascript" src="/demo/js/details.js"></script>
-<script src="/demo/js/vhallyun.js"></script>
+<script type="text/javascript" src="/xcview/js/details.js"></script>
+<script type="text/javascript" src="/xcview/js/vhallyun.js"></script>
 
 
 <script type="text/javascript">
