修改错误的参数命名

--- a/wechat/src/main/webapp/xcview/html/details.html
+++ b/wechat/src/main/webapp/xcview/html/details.html
@@ -447,18 +447,17 @@ $(function(){
         <!--即将开始提示-->
 
         <!--添加视频读取失败后的提示-->
-        <div class="video_end_top4" style="displays: none;">
+        <div class="video_end_top4" style="display: none;">
             <p>获取媒体数据过程中出错 </p>
             <div class="initiation">点击刷新</div>
         </div> 
         <!--添加视频读取失败后的提示-->
 
 		<!-- 主播要离开一会提示开始-->
-		<div class="video_end_top3" style="displays: none;">
+		<div class="video_end_top3" style="display: none;">
             <img src="" alt="" class="smallImgPath" />
             <div class="video_end"></div>
             <p>主播要离开一会儿，稍等片刻哦~</p>
-            <!-- <div class="initiation" onclick="location.href ='/xcview/html/my_study.html'">学习中心</div> -->
         </div>
 		<!-- 主播要离开一会提示结束-->
 
