[feature]直播间分享与设置

--- a/online-web/src/main/webapp/web/html/live-room/live-room.html
+++ b/online-web/src/main/webapp/web/html/live-room/live-room.html
@@ -196,8 +196,9 @@
 			  						</div>
 			  					</li>
 			  					<li><img src="/web/images/video2/quan.png"/></li>
-			  					<li><img src="/web/images/video2/weibo.png"/></li>
-			  					<li><img src="/web/images/video2/Qq.png"/></li>
+			  					<li id="weibo_share"><img src="/web/images/video2/weibo.png"/>
+								</li>
+			  					<li id="qq_share"><img src="/web/images/video2/Qq.png"/></li>
 			  				</ul>
 			  			</div>
 			  		</div>
