--- a/online-web/src/main/webapp/web/html/liveVideo2.html
+++ b/online-web/src/main/webapp/web/html/liveVideo2.html
@@ -32,7 +32,7 @@
 <script type="text/javascript" src="/web/js/live-streamin-document/jquery.js" ></script>
 <script type="text/javascript" src="/web/js/live-streamin-document/jqueryui.js" ></script>
 <script type="text/javascript" src="/web/js/live-streamin-document/jquery.iviewer.js" ></script>
-
+<link rel="stylesheet" href="https://static.vhallyun.com/jssdk/videojs.min.css?v=1.0.0">
 
 <script type="text/javascript">
     var $ = jQuery;
@@ -813,11 +813,10 @@
 <script src="/web/js/im/giftSend2.js?v=ipandatcm_1.3" type="text/javascript" charset="utf-8"></script>
 
 <!-- 微吼云 -->
-
-<script src="https://static.vhallyun.com/jssdk/vhall-jssdk-live-1.0.0.js?v=201806271657"></script>
+<script src="https://static.vhallyun.com/jssdk/dvideo-plugin.js?v=0.3"></script>
+<script src="https://static.vhallyun.com/jssdk/vhall-jssdk-player-1.0.0.js"></script>
 <script src="https://static.vhallyun.com/jssdk/vhall-jssdk-doc-1.0.0.js?v=201806271657"></script>
 <script src="https://static.vhallyun.com/jssdk/vhall-jssdk-chat-1.0.0.js?v=201801121522"></script>
-<script src="https://static.vhallyun.com/jssdk/dvideo-plugin.js?v=0.3"></script>
 <script src="https://static.vhallyun.com/jssdk/vhall-jssdk-base-1.0.0.js?v=201806271657"></script>
 
 
