直播间--修改分辨率问题

--- a/online-web/src/main/webapp/web/html/liveVideo2.html
+++ b/online-web/src/main/webapp/web/html/liveVideo2.html
@@ -169,7 +169,7 @@
 		display: none;
 	}
 	/*====隱藏修改視頻后====*/
-	.vjs-control-bar{
+	/*.vjs-control-bar{
 		display: none;
 	}
 	.vjs-hidden{
@@ -183,7 +183,7 @@
 	}
 	.vjs-big-play-button{
 		display: none;
-	}
+	}*/
 	/*隱藏后結束*/
 
 	/*修改變動后的代碼--微吼云開始*/
@@ -214,10 +214,13 @@
 		height: 100% !important;
 	}
 	#myVideo div:first-child{
-		/*height: 87% !important;*/
+		height: 87% !important;
 		/*height: 100% !important;*/
     	width: 100%;
-    	background: #000;
+    	/*background: #000;*/
+	}
+	#myVideo video{
+		/*z-index: 9;*/
 	}
 	.player-container{
 		height: 100%;
