--- a/wechat/src/main/webapp/xcview/html/details.html
+++ b/wechat/src/main/webapp/xcview/html/details.html
@@ -394,6 +394,9 @@ $(function(){
 	    margin-bottom: 0.4rem;
 	    text-align: center;
 	}
+	#face{
+		display: none !important;
+	}
 </style>
 </head>
 <body style="background: #f8f8f8;overflow: hidden1;">
