--- a/online-web/src/main/webapp/web/html/liveVideo2.html
+++ b/online-web/src/main/webapp/web/html/liveVideo2.html
@@ -263,6 +263,9 @@
 	.send-box{
 		/*background: red;*/
 	}
+	.player-container{
+		height: 87% !important;
+	}
 </style>
 <script>
 	window.onload = function(){
@@ -361,9 +364,16 @@
     .playback{
     	width: 100%;
     	height: 100%;
-    	background: url(/web/images/2.jpg) no-repeat;
-    	background-size: 100% 100%;
-    	/*position: relative;*/
+    	/*background: url(/web/images/2.jpg) no-repeat;
+    	background-size: 100% 100%;*/
+    	position: relative;
+    }
+    .playback-img{
+    	width: 100%;
+    	height: 100%;
+    	position: absolute;
+    	top: 0;
+    	left: 0;
     }
     .playback-rebroadcast{
 	    width: 100px;
@@ -376,7 +386,7 @@
 	    margin: 0 auto;
 	    position: absolute;
 	    top: 45%;
-	    left: 40%;
+	    left: 50%;
 	    margin-left: -50px;
 	    color: #fff;
     }
@@ -458,10 +468,11 @@
 			<span class="liveTime">直播时间：<span></span></span>
 		</div>
 		
-		<div id="livePlayer">
+		<div id="livePlayer">.playback-rebroadcast
 		
 			<!--回放重播提示开始-->
 			<div class="playback" style="display:none;">
+				<img src="/web/images/2.jpg" alt="" class="playback-img" />
 				<div class="playback-rebroadcast">重播</div>
 			</div>
 			<!--回放重播提示结束-->
