--- a/online-web/src/main/webapp/web/html/liveVideo2.html
+++ b/online-web/src/main/webapp/web/html/liveVideo2.html
@@ -371,7 +371,7 @@
     .playback-img{
     	width: 100%;
     	height: 100%;
-    	position: absolute;
+    	position: absolute;playback-rebroadcast
     	top: 0;
     	left: 0;
     }
@@ -468,7 +468,7 @@
 			<span class="liveTime">直播时间：<span></span></span>
 		</div>
 		
-		<div id="livePlayer">.playback-rebroadcast
+		<div id="livePlayer">
 		
 			<!--回放重播提示开始-->
 			<div class="playback" style="display:none;">
