隐藏语音课程

--- a/online-web/src/main/webapp/web/html/anchor/curriculum.html
+++ b/online-web/src/main/webapp/web/html/anchor/curriculum.html
@@ -856,9 +856,9 @@
 								<label>线下课
 									<input type="radio" value="3" name="course_form" onclick="showCourseAttribute(3)" />
 								<i></i></label>
-								<label>语音直播
+								<!--<label>语音直播
 									<input type="radio" value="4" name="course_form" onclick="showCourseAttribute(4)" />
-								<i></i></label>
+								<i></i></label>-->
 							</div>
 	
 							<div class="select">
