--- a/online-web/src/main/webapp/web/html/liveVideo2.html
+++ b/online-web/src/main/webapp/web/html/liveVideo2.html
@@ -214,7 +214,7 @@
 		height: 100% !important;
 	}
 	#myVideo div:first-child{
-		height: 87% !important;
+		height: 100% !important;
 		/*height: 100% !important;*/
     	width: 100%;
     	/*background: #000;*/
@@ -265,6 +265,66 @@
 	}
 	.player-container{
 		height: 87% !important;
+	}
+	.generate-replay{
+		width: 240px;
+	    height: 30px;
+	    line-height: 30px;
+	    font-size: 18px;
+	    text-align: center;
+	    border-radius: 4px;
+	    background: #ed4343;
+	    margin: 0 auto;
+	    position: absolute;
+	    top: 45%;
+	    left: 50%;
+	    margin-left: -120px;
+	    color: #fff;
+	}
+	.generate-replay{
+		width: 285px;
+	    height: 30px;
+	    line-height: 30px;
+	    font-size: 18px;
+	    text-align: center;
+	    border-radius: 4px;
+	    background: #ed4343;
+	    margin: 0 auto;
+	    position: absolute;
+	    top: 45%;
+	    left: 50%;
+	    margin-left: -142.5px;
+	    color: #fff;
+	}
+	.see-the-replay{
+		width: 200px;
+	    height: 30px;
+	    line-height: 30px;
+	    font-size: 18px;
+	    text-align: center;
+	    border-radius: 4px;
+	    background: #ed4343;
+	    margin: 0 auto;
+	    position: absolute;
+	    top: 45%;
+	    left: 50%;
+	    margin-left: -100px;
+	    color: #fff;
+	}
+	.learning-center{
+		width: 250px;
+	    height: 30px;
+	    line-height: 30px;
+	    font-size: 18px;
+	    text-align: center;
+	    border-radius: 4px;
+	    background: #ed4343;
+	    margin: 0 auto;
+	    position: absolute;
+	    top: 45%;
+	    left: 50%;
+	    margin-left: -125px;
+	    color: #fff;
 	}
 </style>
 <script>
@@ -371,7 +431,7 @@
     .playback-img{
     	width: 100%;
     	height: 100%;
-    	position: absolute;playback-rebroadcast
+    	position: absolute;
     	top: 0;
     	left: 0;
     }
@@ -474,6 +534,10 @@
 			<div class="playback" style="display:none;">
 				<img src="/web/images/2.jpg" alt="" class="playback-img" />
 				<div class="playback-rebroadcast">重播</div>
+				<div class="generate-replay" style="display:none;">直播结束，正在生成回放…</div>
+				<div class="leave" style="display:none;">主播要离开一会儿，稍等片刻哦~</div>
+				<div class="see-the-replay" style="display:none;">直播结束,点击查看回放</div>
+				<div class="learning-center" style="display:none;">直播结束，点击返回学习中心</div>
 			</div>
 			<!--回放重播提示结束-->
 				
