pc直播间--视频按钮修改。。邀请卡测试跨域问题

--- a/online-web/src/main/webapp/web/html/liveVideo2.html
+++ b/online-web/src/main/webapp/web/html/liveVideo2.html
@@ -326,6 +326,19 @@
 	    margin-left: -125px;
 	    color: #fff;
 	}
+	
+	/*音量控制按钮*/
+	#myVideo .video-js .vjs-volume-bar{
+		height: 14px !important;
+		margin-top: 12px;
+	}
+	
+	/*进度条*/
+	.video-js .vjs-progress-control{
+		height: 14px !important;
+		margin-top: 12px;
+	}
+	
 </style>
 <script>
 	window.onload = function(){
