--- a/wechat/src/main/webapp/xcview/html/invitation_card/index.html
+++ b/wechat/src/main/webapp/xcview/html/invitation_card/index.html
@@ -77,7 +77,7 @@
             <div class="sub_imgBoxWrapper1 sub_imgBoxWrapper">
                 <div class="img_cont" style="background-image: url(img/slect1bg.png);background-size: 100% 100%;">
                     <div class="logo"><img src="img/logo.png" alt=""></div>
-                    <div class="avatar"><img src="http://test-file.ipandatcm.com/18727081951/a4ed5d8369e62170.jpg" alt="头像" crossOrigin="anonymous" /><p class="p1">酸酸甜甜柠檬水</p></div>
+                    <div class="avatar"><img src="/imgProxy?imgURL=http://test-file.ipandatcm.com/18727081951/a4ed5d8369e62170.jpg" alt="头像" crossOrigin="anonymous" /><p class="p1">酸酸甜甜柠檬水</p></div>
                     <div class="size">给你推荐了一个很棒的中医课程</div>
                     <div class="mainIma1"><img src="img/0.jpg" alt=""></div>
                     <div class="des">
@@ -228,8 +228,8 @@
                 $(".content_one").css("border","2px solid #fff");
             });
 
-            // $(".content_one").click();
-            $(".content_two").click();
+            $(".content_one").click();
+            // $(".content_two").click();
 
 
         }
