--- a/online-web/src/main/webapp/web/html/anchors_resources.html
+++ b/online-web/src/main/webapp/web/html/anchors_resources.html
@@ -1864,7 +1864,7 @@
 							        	<option value="volvo">--选择区/县--</option> 
 							       	</select>	
 
-									<textarea class="address-text" placeholder="请输入详细地址"></textarea>
+									<textarea class="address-text" maxlength="100" placeholder="请输入详细地址"></textarea>
 									<p class="warning-manage studyAddress-null hide">学习地址不能为空</p>	
 								</div>
 							</div>
