修改直播间bug

--- a/online-web/src/main/webapp/web/html/liveVideoOther.html
+++ b/online-web/src/main/webapp/web/html/liveVideoOther.html
@@ -148,6 +148,8 @@
 		</div>
 		<!-- right start -->
 </div>
+<script src="https://static.vhallyun.com/jssdk/vhall-jssdk-chat-1.0.0.js?v=201801121522"></script>
+<script src="https://static.vhallyun.com/jssdk/vhall-jssdk-base-1.0.0.js?v=201806271657"></script>
 <script src="/web/js/liveVideo/liveVideoOther.js"></script>
 <script src="/web/js/common/video_share.js?v=ipandatcm_1.3"></script>
 </body>
