修改手机号bug

--- a/online-web/src/main/webapp/web/html/ResidentHospital.html
+++ b/online-web/src/main/webapp/web/html/ResidentHospital.html
@@ -1104,6 +1104,7 @@
             autoFloatEnabled: true,
             enableAutoSave:false,
             imagePopup:false,
+            autoFloatEnabled:false,
             maximumWords:10000
 	});
 
