--- a/online-web/src/main/webapp/web/html/anchor/curriculum.html
+++ b/online-web/src/main/webapp/web/html/anchor/curriculum.html
@@ -681,11 +681,32 @@
 <!--语音直播弹窗-->
 <!--语音直播遮罩层-->
 <div id="video-cover" class="hide" style="position: fixed; top: 0px; left: 0px; width: 100%; height: 100%; background: rgb(0, 0, 0); opacity: 0.3; z-index: 888;"></div>
-
 <div class="video-live hide">
 	<p class="video-top">语音直播</p>
 	<img src="/webview/images/usershow/ERWEIMA-ICON2.png"/>
 	<p class="video-tip">扫描二维码下载熊猫中医APP，在客户端进行直播</p>
+</div>
+<!--是否开启直播回放弹窗-->
+<div class="history-live hide">
+	<p class="close-live">
+		<img src="/web/images/cha.png" alt="关闭" />
+	</p>
+	<span class="live-tip-left z">是否支持回放</span>
+	<ul class="radio-select y">
+		<li>
+			<p>
+				<em></em>				
+			</p>
+			<span>是</span>
+		</li>
+		<li>
+			<p>
+				<em></em>
+			</p>
+			<span>否</span>
+		</li>
+	</ul>
+	<p class="sure-live">确定</p>
 </div>
 
 <div class="wp">
