--- a/online-web/src/main/webapp/web/html/liveVideo2.html
+++ b/online-web/src/main/webapp/web/html/liveVideo2.html
@@ -267,13 +267,13 @@
 		height: 87% !important;
 	}
 	.generate-replay{
-		width: 240px;
+		width: 230px;
 	    height: 30px;
 	    line-height: 30px;
 	    font-size: 18px;
 	    text-align: center;
 	    border-radius: 4px;
-	    background: #ed4343;
+	    background: #00bc12;
 	    margin: 0 auto;
 	    position: absolute;
 	    top: 45%;
@@ -281,14 +281,14 @@
 	    margin-left: -120px;
 	    color: #fff;
 	}
-	.generate-replay{
+	.leave{
 		width: 285px;
 	    height: 30px;
 	    line-height: 30px;
 	    font-size: 18px;
 	    text-align: center;
 	    border-radius: 4px;
-	    background: #ed4343;
+	    background: #00bc12;
 	    margin: 0 auto;
 	    position: absolute;
 	    top: 45%;
@@ -303,7 +303,7 @@
 	    font-size: 18px;
 	    text-align: center;
 	    border-radius: 4px;
-	    background: #ed4343;
+	    background: #00bc12;
 	    margin: 0 auto;
 	    position: absolute;
 	    top: 45%;
@@ -318,7 +318,7 @@
 	    font-size: 18px;
 	    text-align: center;
 	    border-radius: 4px;
-	    background: #ed4343;
+	    background: #00bc12;
 	    margin: 0 auto;
 	    position: absolute;
 	    top: 45%;
@@ -455,7 +455,7 @@
 	    font-size: 18px;
 	    text-align: center;
 	    border-radius: 4px;
-	    background: #ed4343;
+	    background: #00bc12;
 	    margin: 0 auto;
 	    position: absolute;
 	    top: 45%;
