--- a/online-web/src/main/webapp/upPicDemo.html
+++ b/online-web/src/main/webapp/upPicDemo.html
@@ -23,13 +23,18 @@
 				//上传图片方法
 				function upPic(iptName,boxName){
 					//医师-医馆封面上传图片调用的接口
-					function picUpdown(baseurl, imgname) {
-						RequestService("/medical/common/upload", "post", {
-							image: baseurl,
-						}, function(data) {
-							console.log(data);
-							$('.' + imgname + '').html('<img src="' + data.resultObject + '" >');
-						})
+					function picUpdown(form, imgname) {
+                        $.ajax({
+                            type: 'post',
+                            url: "/medical/common/upload",
+                            data: form,
+                            cache: false,
+                            processData: false,
+                            contentType: false,
+                        }).success(function (data) {
+                            $('.' + imgname + '').html('<img src="' + data.resultObject + '" >');
+                        });
+
 					}
 				
 					//医馆封面上传
@@ -50,9 +55,11 @@
 							}, 2000)
 							return false;
 						}
+                        var form = new FormData();
+                        form.append("image", this.files[0]);
 						var reader = new FileReader();
 						reader.onload = function(e) {
-							picUpdown(reader.result, boxName);
+							picUpdown(form, boxName);
 						}
 						reader.readAsDataURL(this.files[0])
 					})
